# knoxvnc

./: .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
.github/workflows/: release.yml
app/: .gitignore  build.gradle
app/src/androidTest/java/com/appknox/vnc/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  vnc.c
app/src/main/java/com/appknox/vnc/: BootReceiver.java  Constants.java  Defaults.kt  InputPointerView.kt  InputRequestActivity.java  InputService.java  InputWrapperService.java  KeyboardMap.java  MainActivity.java  MediaProjectionRequestActivity.java  NotificationRequestActivity.java  Utils.java  VNCService.java  WriteStorageRequestActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: input_service_config.xml
app/src/test/java/com/appknox/vnc/: ExampleUnitTest.java
